60-k8s/k8s-ingress-docker-desktop/test-nginx-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: myapp
          image: yudady/myapp:v1
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myapp-svc
  name: myapp-svc
spec:
  selector:
    app: myapp
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ing
spec:
  ingressClassName: nginx
  rules:
    - host: "yudady.ml"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: myapp-svc
                port:
                  number: 80
